[project]
name = "kl-3d"
version = "0.1.0"
description = "3D KL divergence visualization as Manim animations."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Simon Buehrer", email = "simon.buehrer26@gmail.com" }]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
manim = ">=0.19.1,<0.21"

# `latex` on /usr/sepp/bin is a 2008 TeX Live (no `standalone.cls`).
# The ITET cluster also ships TeX Live 2025 at /usr/pack/texlive-2025-sr;
# prepend its bin dir so manim's MathTex picks up `standalone.cls` and a
# modern `dvisvgm`. Harmless on hosts without that path.
[tool.pixi.activation.env]
PATH = "/usr/pack/texlive-2025-sr/2025/bin/x86_64-linux:$PATH"

# ---------------------------------------------------------------------------
# Tasks: invoke with `pixi run <name>`
# ---------------------------------------------------------------------------

[tool.pixi.tasks]
render    = "manim -ql kl_3d.py KLStory"
render-hq = "manim -qh kl_3d.py KLStory"
smoke     = "manim -s -ql kl_3d.py KLStory"
